# dioxus-ai

./: Cargo.toml  README.md  demo.mov  output.html
automated-qa/: Cargo.toml
automated-qa/src/: main.rs  pretty_print.rs
component-generation/: Cargo.toml
component-generation/data-generation/: .gitattributes  deduplicated.csv  finished_prompts.json  prompts.json  validated.csv
component-generation/data-generation/canidate-genneration/: Cargo.toml
component-generation/data-generation/canidate-genneration/src/: main.rs
component-generation/data-generation/component-structure/: Cargo.toml
component-generation/data-generation/component-structure/src/: lib.rs  prompts.rs
component-generation/data-generation/data/: data1714696307.json  data1714697167.json  data1714698205.json  data1714698584.json  data1714701151.json  data1714703051.json  data1714703306.json  data1714704225.json  data1714706521.json  data1714707021.json  data1714707458.json  data1714707839.json  data1714708957.json  data1714709515.json  data1714718663.json  data1714719103.json  data1714720029.json  data1714721860.json  data1714725359.json  data1714727338.json  data1714727716.json  data1714728638.json  data1714730257.json  data1714732678.json  data1714733478.json  data1714735512.json  data1714736392.json  data1714736829.json  data1714737466.json  data1714738706.json  data1714739103.json  data1714740083.json  data1714740903.json  data1714741526.json  data1714743230.json  data1714743971.json  data1714744594.json  data1714750032.json  data1714754325.json  data1714755274.json  (+166 more)
component-generation/data-generation/dataset-cleaning/: Cargo.toml
component-generation/data-generation/dataset-cleaning/src/: main.rs
component-generation/data-generation/old-data/: data1714509669.json  data1714510172.json  data1714510866.json  data1714511536.json  data1714512220.json  data1714512516.json  data1714512716.json  data1714513699.json  data1714514133.json  data1714514190.json  data1714514511.json  data1714517752.json  data1714519727.json  data1714520462.json  data1714522176.json  data1714523866.json  data1714525099.json  data1714576483.json  data1714577112.json  data1714578458.json  data1714582431.json  data1714584530.json  data1714589096.json  data1714594478.json  data1714596534.json  data1714596910.json  data1714598826.json  data1714599446.json  data1714600749.json  data1714602396.json  data1714604247.json  data1714604752.json  data1714610118.json  data1714611788.json  data1714612106.json  data1714612540.json  data1714614072.json  data1714615828.json  data1714645011.json  data1714646728.json  (+13 more)
component-generation/data-generation/prompt-generation/: Cargo.toml
component-generation/data-generation/prompt-generation/src/: main.rs
component-generation/examples/: cli.rs
component-generation/src/: lib.rs
data-generation/: .gitattributes  .gitignore  Cargo.toml  data.csv  duplicated.csv  filtered.json  finished_prompts.json  validated.json
data-generation/components-data/: data1714510409.json  data1714510646.json  data1714511167.json  data1714512013.json  data1714513959.json  data1714515387.json  data1714515620.json  data1714517492.json  data1714521199.json  data1714522675.json  data1714523430.json  data1714524183.json  data1714579593.json  data1714580098.json  data1714584911.json  data1714585171.json  data1714589835.json  data1714590340.json  data1714591354.json  data1714591797.json  data1714593362.json  data1714593920.json  data1714595797.json  data1714603313.json  data1714605189.json  data1714605626.json  data1714609125.json  data1714609501.json  data1714610495.json  data1714611412.json  data1714613816.json  data1714614868.json  data1714616265.json  data1714645749.json  data1714648076.json  data1714648934.json  data1714650778.json  data1714654386.json  data1714654913.json  data1714656101.json  (+8 more)
data-generation/data/: data1714408477.json  data1714409224.json  data1714410561.json  data1714412218.json  data1714413832.json  data1714415426.json  data1714417144.json  data1714418835.json  data1714421669.json  data1714423052.json  data1714424501.json  data1714425882.json  data1714426948.json  data1714427892.json  data1714428705.json  data1714429657.json  data1714430649.json  data1714433238.json  data1714433629.json  data1714433770.json  data1714433845.json  data1714433973.json  data1714434053.json  data1714434184.json  data1714434260.json  data1714434391.json  data1714434524.json  data1714434598.json  data1714435304.json  data1714435445.json  data1714435523.json  data1714435665.json  data1714435797.json  data1714435877.json  data1714436015.json  data1714436151.json  data1714436227.json  data1714436365.json  data1714436444.json  data1714436577.json  (+387 more)
data-generation/examples/: clean.rs  gen_prompt.rs  print_reformatted.rs
data-generation/src/: lib.rs  main.rs  prompts.rs
experiments/prompting/: response.md  rsx.md
src/: generate.rs  html.rs  main.rs  ux.rs
tests/: diff.rs
