[package]
name = "dioxus-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
kalosm = { git = "https://github.com/floneum/floneum", branch = "improve-node-interface", default-features = false, features = ["language"] }
scraper = "0.19.0"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = "0.3.18"
zstd-sys = "=2.0.9"

[features]
metal = ["kalosm/metal"]
