[package]
name = "dioxus-ai"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "automated-qa",
    "component-generation",
    "component-generation/data-generation/component-structure",
    "component-generation/data-generation/canidate-genneration",
    "component-generation/data-generation/prompt-generation",
    "component-generation/data-generation/dataset-cleaning",
]
