[package]
name = "automated-qa"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
kalosm = { git = "https://github.com/floneum/floneum", default-features = false, features = ["language"] }
scraper = "0.19.0"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = "0.3.18"
zstd-sys = "=2.0.9"
enumset = "1.1.3"
const_format = "0.2.32"
dioxus-rsx-rosetta = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-autofmt = { git = "https://github.com/DioxusLabs/dioxus" }
syntect = "5.2.0"
regex = "1.10.4"

[features]
default = ["metal"]
metal = ["kalosm/metal"]
