[package]
name = "component-generation"
version = "0.1.0"
edition = "2021"

[dependencies]
kalosm = { git = "https://github.com/floneum/floneum", branch = "improve-node-interface", default-features = false, features = ["language"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = "0.3.18"
zstd-sys = "=2.0.9"
rsx-rosetta = { git = "https://github.com/DioxusLabs/dioxus", branch = "jk/jsx-to-rsx" }
dioxus-autofmt = { git = "https://github.com/DioxusLabs/dioxus", branch = "jk/jsx-to-rsx" }
syntect = "5.2.0"
regex = "1.10.4"

[features]
default = ["metal"]
metal = ["kalosm/metal"]
