[package]
name = "canidate-genneration"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
fundu = "2.0.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
csv = "1.3.0"
once_cell = "1.19.0"
rand = "0.8.5"
regex = "1.10.4"

component-structure = { path = "../component-structure" }
